Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL)
-
Can result in hang or crash
-
Q3/2025 Maintenance, Q4/2025 Galera Maintenance, Q4/2025 Galera Development
Description
SET GLOBAL wsrep_cluster_address=AUTO; |
SET GLOBAL wsrep_slave_threads=12; |
Leads to a thread hang. Another connection will show the hanging statement:
|
11.0.1 b075191ba8598af6aff5549e6e19f6255aef258a (Optimized) |
11.0.1-opt>SHOW PROCESSLIST;
|
+----+------+-----------+------+---------+------+----------+-----------------------------------+----------+
|
| Id | User | Host | db | Command | Time | State | Info | Progress |
|
+----+------+-----------+------+---------+------+----------+-----------------------------------+----------+
|
| 4 | root | localhost | test | Query | 7972 | NULL | SET GLOBAL wsrep_slave_threads=12 | 0.000 |
|
| 5 | root | localhost | test | Query | 0 | starting | SHOW PROCESSLIST | 0.000 |
|
+----+------+-----------+------+---------+------+----------+-----------------------------------+----------+
|
2 rows in set (0.000 sec)
|
Attachments
Issue Links
- relates to
-
MDEV-25472 Server crashes when wsrep_cluster_address set to unkown address and wsrep_slave_threads to 0
-
- Closed
-
-
MDEV-27689 Node hangs and complete galera cluster freezes
-
- Closed
-